# rafka-test

./: Cargo.toml  LICENSE  README.md
.github/workflows/: docker-build.yml  rust.yml
docs/: caching_strategies.md  grpc_version_checklist.md  tcp_version_checklist.md
infra/: README copy.md  README.md
infra/k8s/broker/: hpa.yaml  service.yaml  statefulset.yaml
infra/k8s/core/: configmap.yaml  secrets.yaml  service-accounts.yaml
infra/k8s/monitoring/: alerts.yaml  grafana.yaml  prometheus.yaml
infra/k8s/network/: policies.yaml
infra/k8s/storage/: storage-class.yaml
infra/scripts/: cleanup.sh  deploy.sh
rafka/: .env  Cargo.toml  Dockerfile  generate_structure.sh
rafka/.cargo/: config.toml
rafka/crates/broker/: Cargo.toml
rafka/crates/broker/src/: broker.rs  lib.rs
rafka/crates/consumer/: Cargo.toml
rafka/crates/consumer/src/: consumer.rs  lib.rs
rafka/crates/core/: Cargo.toml  build.rs
rafka/crates/core/src/: lib.rs  message.rs
rafka/crates/core/src/proto/: rafka.proto
rafka/crates/producer/: Cargo.toml
rafka/crates/producer/src/: lib.rs  producer.rs
rafka/crates/storage/: Cargo.toml
rafka/crates/storage/src/: db.rs
rafka/docs/: architecture.md  caching.md
rafka/scripts/: benchmark.sh  helloworld.sh  kill.sh  offset_tracking_demo.sh  partitioned_demo.sh  retention_demo.sh  start.sh  stop.sh  storage_demo.sh
rafka/src/: lib.rs
rafka/src/broker/: Cargo.toml  mod.rs
rafka/src/broker/src/: broker.rs  lib.rs  load_balancer.rs  memory_store.rs  metadata.rs  metrics.rs  network.rs  partition.rs  routing.rs  storage.rs
rafka/src/config/: config.rs
rafka/src/consumer/: Cargo.toml
rafka/src/consumer/src/: consumer.rs  group.rs  lib.rs
rafka/src/core/: Cargo.toml
rafka/src/core/src/: config.rs  error.rs  lib.rs  message.rs  mod.rs  thread_pool.rs
rafka/src/network/: Cargo.toml
rafka/src/network/src/: cluster.rs  consensus.rs  delivery.rs  dht.rs  heartbeat.rs  kubernetes.rs  leader.rs  p2p.rs  rebalance.rs  recovery.rs  replication.rs  routing.rs  transfer.rs
rafka/src/producer/: Cargo.toml
rafka/src/producer/src/: producer.rs
rafka/src/storage/src/: backup.rs  cache.rs  mod.rs  shared_cache.rs
rafka/src/utils/: metrics.rs
rafka_core/src/: error.rs
src/: config.rs  error.rs  lib.rs
src/broker/: Cargo.toml
src/broker/src/: broker.rs  lib.rs  load_balancer.rs  partition.rs
src/config/: config.rs
src/consumer/: consumer.rs
src/core/: Cargo.toml
src/core/src/: config.rs  lib.rs  message.rs  mod.rs  thread_pool.rs
src/network/src/: lib.rs  p2p.rs  transport.rs
src/producer/: producer.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs  scylla.rs  storage.rs
src/tests/: broker_tests.rs  cache_tests.rs  integration_tests.rs  network_tests.rs  producer_tests.rs  storage_tests.rs
src/utils/: error.rs
