[package]
name = "rafka-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
parking_lot = "0.11"
crossbeam-queue = "0.3"
bincode = "1.3"
 